JVM内存分配：空间分配担保机制